Exclude extended configurations from resolving external dependencies (closes #175)